[package]
name = "hotsync_conduit_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
camino = "1.1.6"
dlopen2 = "0.6.1"
palmrs = { git = "https://github.com/knickish/palmrs.git", branch = "dogfooding_tweaks" }

[[example]]
name = "heffalump_conduit"
crate-type = ["cdylib"]